[package]
name = "ripledd_api_wrapper"
version = "0.1.0"
license = "MIT"
authors = ["StarloExoliz mgamerdinge146@gmail.com"] 
edition = "2021"

description = "A Rust library for interacting with the Ripledd API"
documentation = "https://docs.rs/"

[dependencies]
reqwest = "^0.11" # Example dependency

[dev-dependencies]
tokio = { version = "^1.2", features = ["full"] }

[[bin]]
src/ripledd_api_wrapper.rs